--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 <title>Text Input Control</title>
 </head>
 <body>
-<form>username:  <input type="text" name="username" />
+<form>username  <input type="text" name="username" />
 <br>
-password:  <input type="password "="password" />
+password  <input type="password "="password" />
+<a href="salaryCalculator.html"><em>click</em></a>
+
 </form>
 </body>
 </html>
