--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <! DOCTYPe html>
-<html>Salary Calculator
+<html>         Salary Calculator
+<br>
+<br>
+
 <html>
 <head>
+<link rel="stylesheet"type="text/css"href="salarycalc.css">	
+<body>
 <title>Text Input Control</title>
 </head>
 <body>
-<form>username  <input type="text" name="username" />
+<form action="salaryCalculator.html">username<br>  <input type="text" name="username" />
 <br>
-password  <input type="password "="password" />
-<a href="salaryCalculator.html"><em>click</em></a>
+<p>password<br> <input type="password" "="password"/> 
 
+<input type="submit" <a href=value="salaryCalculator.html"></a>
 </form>
 </body>
 </html>
