--- a/salaryCalculator.html
+++ b/salaryCalculator.html
@@ -1,21 +1,24 @@
 <! DOCTYPe html>
-<html>Salary Calculator
+<html>  Salary Calculator<br><br>
 <html>
 <head>
 <title>Text Input Control</title>
 </head>
+<link rel="stylesheet"type="text/css"href="salarycalc.css">	
 <body>
-<form>Addnew Employee <input type="text" name="addname" />
+<form action="Directors.html">New Employee ID<br>
+<input type="text" name="id" />
 <br>
-
-<select>
-<option value="Directors">Directors</option>
+<p>Experience Level</p>
+<select name="forma" onchange="location = this.options{this.selectedIndex}.value;">
+<option value="Directors.html">Directors</option>
 <option value="Executives">Executives</option>
 <option value="Managers">Managers</option>
 <option value="Associate">Associates</option>
 <option value="Interns">Interns</option>
-/>
 </select>
+
+<input type="submit"<a href=value="Directors.html"></a> 
 </form>
 </body>
 
